force-app/main/default/objects/Proposed_Amendment__c/Proposed_Amendment__c.object-meta.xml
<CustomObject>
    <label>Proposed Amendment</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Proposed Amendment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>