force-app/main/default/objects/Proposed_Amendment__c/fields/Advance_Payment_Requested__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_Requested__c</fullName>
    <label>Advance Payment Requested</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>