force-app/main/default/objects/Proposed_Amendment__c/fields/Amendment_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Fee_Amount__c</fullName>
    <label>Amendment Fee Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>