force-app/main/default/objects/Proposed_Amendment__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proposed Amendments</relationshipLabel>
    <relationshipName>Proposed_Amendments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>